הגדרות גלובליות לתצוגת השירים

--- a/docs/_layouts/artist.html
+++ b/docs/_layouts/artist.html
@@ -18,7 +18,7 @@ layout: default # Inherits from default, which loads core.js, ads.js, shared-red
   </div>
 </div>
 
-<div id="resultsTable" class="custom-table constrained-content-area">
+<div id="resultsTable" class="custom-table">
   <table>
     <thead>
       <tr>
