עיצוב רספונסיבי משופר עבור סרגל עליון

--- a/docs/assets/css/personal.css
+++ b/docs/assets/css/personal.css
@@ -354,8 +354,8 @@ td {
      body { padding-top: calc(var(--navbar-height) + var(--filter-section-height) + var(--fixed-top-margin) + 10px); }
      .fixed-header-wrapper { left: 5px; right: 5px; }
      .header-content-unit { border-radius: 8px; }
-     .top-navbar-section { padding: 0 8px; gap: 8px; }
-     .top-navbar-section .logo-container { display: none; } 
+     .top-navbar-section { padding: 0 8px; gap: 0px; }
+     .top-navbar-section .icons-container .feedback-button { display: none;}
      .top-navbar-section .search-bar { margin: 0 auto; padding: 0 0.5rem 0 0.8rem; }
      .top-navbar-section .search-input { font-size: 0.9em; }
      .top-navbar-section .search-icons { display: none; } 
