אייקוני אתר מעודכנים

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <title>{{ page.title }}</title>
   <link rel="canonical" href="{{ page.canonical_url }}" />
-  <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/assets/images/favicon.png">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/personal.css">
   <!-- Google Fonts - Arimo -->
   <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600;700&display=swap" rel="stylesheet">
