הסרת קוד מיושן, שיפור ועיצוב

--- a/docs/_layouts/artist.html
+++ b/docs/_layouts/artist.html
@@ -22,7 +22,7 @@ layout: default # Inherits from default, which loads core.js, ads.js, search.js,
 </div>
 
 <!-- ניתן להוסיף כותרת עם שם האמן -->
-<h2 style="text-align: center; margin-top: 1.5rem; margin-bottom: 1rem;">{{ page.title }}</h2>
+<h2 class="page-main-title">{{ page.title }}</h2>
 
 <div id="resultsTable" class="custom-table">
   <table>
